# RoboticEngineerApplicationsTakeHome

./: README.md
ClientDemo/src/ur_description/: CMakeLists.txt
ClientDemo/src/ur_description/launch/: ur10e.launch.py
ClientDemo/src/ur_description/urdf/: ur10e.gazebo.xacro  ur10e.urdf.xacro  ur_gripper.xacro
ClientDemo/src/ur_robot_driver/: CMakeLists.txt  package.xml
ClientDemo/src/ur_robot_driver/launch/: ur10e_control.launch.py
ClientDemo/src/ur_robot_driver/src/: ur_control_node.py
