<package format="2">
    <name>ur_description</name>
    <version>0.0.1</version>
    <description>UR robot description for simulation</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache 2.0</license>

    <depend>ament_cmake</depend>
    <depend>xacro</depend>
    <depend>urdf</depend>
    <depend>gazebo_ros</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>ros2_control</depend>
</package>
